--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "redux-thunk-axios": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "redux-devtools-app": "^1.2.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
